--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "pm2 start lib/server.js --watch --interpreter babel-node",
+    "dev": "NODE_PATH=./lib pm2 start lib/server.js --watch --interpreter babel-node",
     "webpack": "webpack -wd",
-    "test": "jest -w"
+    "test": "jest --watch"
   },
   "babel": {
     "presets": [
